# shop_fast_api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  dump_test_yoko.sql  main.py  models.py  pyproject.toml  schemas.py
alembic/versions/: 077df2af3612_new_migration.py  07de3aa6ee08_new_migration.py  196f132a2c38_new_migration.py  2ba6c9974207_new_migration.py  3a735406fdd7_new_migration.py  3e51bb9007b9_new_migration.py  44ced196bd5f_new_migration.py  4a49fc455ba6_new_migration.py  6547ec94f114_new_migration.py  70a746d08fd1_new_migration.py  79adff16a248_new_migration.py  7c12a888b006_new_migration.py  7fa093537932_new_migration.py  84099a5e68d5_new_migration.py  85ef6487e1e8_new_migration.py  99098b0f84aa_new_migration.py  a46360147fa0_new_migration.py  af601f63f054_new_migration.py  b0511962609b_new_migration.py  b3cc7c466a41_new_migration.py  b7a85401827a_new_migration.py  ba8ca0b3c0f4_new_migration.py  bf5523281105_new_migration.py  ce1db2c8e15c_new_migration.py  d77a4233ece5_new_migration.py  d9c78eec4cf7_new_migration.py  e3f2d2407f00_new_migration.py  ec58e1a1fe72_new_migration.py  f773aec336be_new_migration.py  fd22f2bcf689_new_migration.py  fd3e4b322ff8_new_migration.py
controllers/: index.py  shop.py
services/: crud_order.py  crud_visit.py  customer.py  employee.py  functions.py  order.py  shop.py  visit.py
tests/: conftest.py
type/: routes.py
